# waveforge

./: .gitignore  CMakeLists.txt  README.md  convert_video.py  pack.py
.github/workflows/: ci-matrix.yml
assets/: README.md  checkpoint.aseprite  duck.aseprite  duckdeath.aseprite  fade-io.json  font.aseprite  gate-wall.aseprite  gate.aseprite  goal.aseprite  heater.aseprite  heavy-pressure-plate.aseprite  laser-emitter.aseprite  laser-receiver.aseprite  manifest.json  mirror.aseprite  power-source.aseprite  pressure-plate.aseprite  transistor.aseprite  watertap.aseprite
assets/levels/: README.md  auto.aseprite  auto.json  cage.aseprite  cage.json  circuit.aseprite  circuit.json  demo.aseprite  demo.json  demo2.aseprite  demo2.json  density.aseprite  density.json  down.aseprite  down.json  fire.aseprite  fire.json  flipflop.aseprite  flipflop.json  hello.aseprite  hello.json  laser.json  laser_signal.aseprite  laser_signal.json  main-menu.aseprite  main-menu.json  polyfill.aseprite  polyfill.json  rocket.aseprite  rocket.json  sandy.aseprite  sandy.json  signal.aseprite  signal.json  simple_intro.aseprite  simple_intro.json  smoke.aseprite  smoke.json  steam_jet.aseprite  steam_jet.json  (+6 more)
assets/levels/minimap/: auto.aseprite  cage.aseprite  circuit.aseprite  density.aseprite  down.aseprite  fallback.aseprite  fire.aseprite  flipflop.aseprite  hello.aseprite  laser.aseprite  laser_signal.aseprite  polyfill.aseprite  rocket.aseprite  sandy.aseprite  signal.aseprite  smoke.aseprite  steam_jet.aseprite  timing.aseprite  upsteam.aseprite  zigzag.aseprite
assets/prototype/: background.aseprite  banner.aseprite  cover.aseprite  duck-death.aseprite  howtoplay.aseprite  keybind.aseprite  level.aseprite  tileset.aseprite  waveforge.aseprite
assets/ui/: credits.json  duck-death.json  key-guide.aseprite  key-guide.json  level-button-selected-frame.aseprite  level-button.aseprite  level-menu.json  link.aseprite  main-menu-bg.aseprite  main-menu.json  settings.json
docs/: physics-system.md
include/wforge/: 2d.h  assets.h  audio.h  colorpalette.h  debug.h  elements.h  fallsand.h  level.h  render.h  save.h  scene.h  structures.h  xoroshiro.h
src/: 2d.cpp  animation.cpp  assets.cpp  audio.cpp  checkpoint.cpp  duck.cpp  font.cpp  goal.cpp  level.cpp  loader.cpp  main.cpp  render.cpp  save.cpp  xoroshiro.cpp
src/elements/: air.cpp  copper.cpp  decoration.cpp  element.cpp  fluid.cpp  gas.cpp  oil.cpp  sand.cpp  smoke.cpp  steam.cpp  stone.cpp  water.cpp  wood.cpp
src/fallsand/: air.cpp  copper.cpp  decoration.cpp  element.cpp  fluid.cpp  fluidflow.cpp  fluids.cpp  gas.cpp  oil.cpp  sand.cpp  smoke.cpp  steam.cpp  stone.cpp  thermal.cpp  water.cpp  wood.cpp  world.cpp
src/items/: brush.cpp  copper.cpp  fire.cpp  oil.cpp  water.cpp
src/scenes/: credits.cpp  duckdeath.cpp  help.cpp  key_guide.cpp  level.cpp  level_menu.cpp  level_switch.cpp  main_menu.cpp  scene.cpp  settings.cpp
src/structures/: electric.cpp  gate.cpp  heater.cpp  laser.cpp  position.cpp  power_source.cpp  pressure_plate.cpp  shape.cpp  tap.cpp  transistor.cpp
